# cuPDLP-C

./: CMakeLists.txt
apps/: onlinelp.cpp  onlinelp.h
cupdlp/: cupdlp_defs.h  cupdlp_solver.c  cupdlp_utils.c
python/: CMakeLists.txt  pdlp.i
